--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@ background-color: rgba(45, 45, 45, 0.1);
     margin-right: 15px;
     
     margin: auto;
+      
+      margin-bottom: 10px;
+
+ 
+  height: auto;
 
     }
 
