--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ background-color: rgba(45, 45, 45, 0.1);
 
 
 
-                            <div class="experience">
+                            <div class="experience" style="margin-bottom: 5px;">
           
 
                                 <div class=""> <a href="https://www.java.com/en/">  <img src="java.png" alt="Java" width="150px" height="150px"></a> </div>
