--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ margin: 20px;
     /*
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     */
-    
+    margin-bottom: 10px;
+     height: auto;
   }
   .lastrow {
     flex: 70%;
@@ -121,17 +122,21 @@ margin: 20px;
     margin:auto;
 
     text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
      height: auto;
 
   }
 
   .lastRowCardContent {
     padding: 10px;
+       margin-bottom: 10px;
+     height: auto;
    
   }
   .lastRowCardText {
     margin-bottom: 30px;
+      margin-bottom: 10px;
+     height: auto;
   }
 
   #lasth{
