--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ font-family: Arial, Helvetica, sans-serif;
 .row { 
   display: flex;
   flex-wrap: wrap;
+     margin-bottom: 10px;
 }
 
 /* Main column */
