--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ font-family: Arial, Helvetica, sans-serif;
 .row { 
   display: flex;
   flex-wrap: wrap;
-     margin-bottom: 10px;
+     
 }
 
 /* Main column */
@@ -164,7 +164,7 @@ background-color: rgba(45, 45, 45, 0.1);
 
 
     /* Footer */
-.footer {
+footer {
     margin-top: auto;
    background-color: #333;
    color: white;
@@ -615,12 +615,12 @@ background-color: rgba(45, 45, 45, 0.1);
         </div>
 
 
-        <div class="footer">
+        <footer>
             <p class="econtact">Email: <a href="mailto:gassenga080@gmail.com" style="color: #00FF00;">gassenga080@gmail.com</a> </p>
             <p class="lcontact">LinkedIn: <a href="https://www.linkedin.com/in/gabriel-rogath-080/"> linkedin.com/in/gabriel-rogath-080 </a></p>
             <p class="tcontact">Twitter: <a href="https://twitter.com/GabrielRogath">@GabrielRogath</a></p>
             <p>Copyright © 2021 Gabriel Rogath   |   ALL RIGHTS RESERVED </p>
             
-          </div>
+          </footer>
     </body>
 </html>
