--- a/index.html
+++ b/index.html
@@ -594,6 +594,10 @@ footer {
                                 <div class=""><a href="https://firebase.google.com/">   <img src="firebase.png" alt="Firebase"  width="80px" ></a> </div>
                                 <div class=""> <a href="https://www.mysql.com/">  <img src="mysql.png" alt="Mysql"  width="80px" ></a> </div>
                                 <div class=""> <a href="https://www.postgresql.org/">  <img src="postgresql.png" alt="Postgresql" width="80px"></a> </div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
                                 
                     
                             </div>
