--- a/index.html
+++ b/index.html
@@ -588,12 +588,12 @@ footer {
                                 <div class=""><a href="https://www.w3.org/Style/CSS20/history.html">   <img src="css.png" alt="CSS"  width="80px" > </a></div>
                                 <div class=""> <a href="https://spring.io/">  <img src="spring.png" alt="Spring"  width="80px" > </a></div>
                                 <div class=""> <a href="https://github.com/Netflix/eureka">  <img src="eureka.jpg" alt="Eureka"  width="80px" > </a></div>
-                                <div class=""> <a href="https://github.com/">  <img src="git.png" alt="GIt & Github"  width="80px" > </a> </div>
-                                <div class=""> <a href="https://www.heroku.com/">  <img src="heroku.png" alt="Heroku"  width="80px" > </a></div>
-                                <div class=""> <a href="https://laravel.com/">  <img src="laravel.jpg" alt="Laravel"  width="80px" > </a></div>
-                                <div class=""><a href="https://firebase.google.com/">   <img src="firebase.png" alt="Firebase"  width="80px" ></a> </div>
-                                <div class=""> <a href="https://www.mysql.com/">  <img src="mysql.png" alt="Mysql"  width="80px" ></a> </div>
-                                <div class=""> <a href="https://www.postgresql.org/">  <img src="postgresql.png" alt="Postgresql" width="80px"></a> </div>
+                                <div class="" style="height: fit-content;"> <a href="https://github.com/">  <img src="git.png" alt="GIt & Github"  width="80px" > </a> </div>
+                                <div class="" style="height: fit-content;"> <a href="https://www.heroku.com/">  <img src="heroku.png" alt="Heroku"  width="80px" > </a></div>
+                                <div class="" style="height: fit-content;"> <a href="https://laravel.com/">  <img src="laravel.jpg" alt="Laravel"  width="80px" > </a></div>
+                                <div class="" style="height: fit-content;"><a href="https://firebase.google.com/">   <img src="firebase.png" alt="Firebase"  width="80px" ></a> </div>
+                                <div class="" style="height: fit-content;"> <a href="https://www.mysql.com/">  <img src="mysql.png" alt="Mysql"  width="80px" ></a> </div>
+                                <div class="" style="height: fit-content;"> <a href="https://www.postgresql.org/">  <img src="postgresql.png" alt="Postgresql" width="80px"></a> </div>
                               
                     
                             </div>
