--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ footer {
 
 
 
-                            <div class="experience box" style="margin-bottom: 5px;">
+                            <div class="experience box" style="margin-bottom: 5px; height: fit-content;">
           
 
                                 <div class=""> <a href="https://www.java.com/en/">  <img src="java.png" alt="Java" width="80px" ></a> </div>
