--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ footer {
         .tcontact :visited {color:#00FF00;}
         .tcontact:hover {color:#FF00FF;} 
         .tcontact:active {color:#0000FF;}
+        
+        .clear{clear:both}
 
 
 
@@ -616,6 +618,9 @@ footer {
 
 
         </div>
+        
+        <div class="clear">&nbsp;</div>
+
 
 
         <footer style="top:100%;">
