--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@ background-color: rgba(45, 45, 45, 0.1);
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-   margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 10px;
+   
+      margin-left:20%;
+    width:80%;
+    height:500px;
       
 
     }
