--- a/index.html
+++ b/index.html
@@ -164,14 +164,25 @@ background-color: rgba(45, 45, 45, 0.1);
 
 
     /* Footer */
-.footer {
-   background-color: #333;
-   color: white;
-  padding: 5px;
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 0%;
-}
+          .footer {
+           
+            color: white;
+            padding: 5px;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 0%;
+            opacity: 0%
+          }
+
+          footer {
+            background-color: #333;
+            color: white;
+            padding: 5px;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 0%;
+          }
+
 
         .econtact{
           padding: 0%;
@@ -629,6 +640,13 @@ background-color: rgba(45, 45, 45, 0.1);
         <div class="clear">&nbsp;</div>
 
 
+        <footer>
+
+          <p class="econtact">Email: <a href="mailto:gassenga080@gmail.com" style="color: #00FF00;">gassenga080@gmail.com</a> </p>
+          <p class="lcontact">LinkedIn: <a href="https://www.linkedin.com/in/gabriel-rogath-080/"> linkedin.com/in/gabriel-rogath-080 </a></p>
+          <p class="tcontact">Twitter: <a href="https://twitter.com/GabrielRogath">@GabrielRogath</a></p>
+          <p>Copyright © 2021 Gabriel Rogath   |   ALL RIGHTS RESERVED </p>
+        </footer>
         
     </body>
 </html>
