--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ background-color: rgba(45, 45, 45, 0.1);
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 160px;
+/*   height: 160px; */
   background-color: #333;
   color: white;
   text-align: center;
