--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 }
      
          body{  
-background-color: slategrey;
-background-image: url("freeback.png");
-text-emphasis-color: red;
-font-family: Arial, Helvetica, sans-serif;
-             margin-bottom: 100px;
+        background-color: slategrey;
+        background-image: url("freeback.png");
+        text-emphasis-color: red;
+        font-family: Arial, Helvetica, sans-serif;
+        /*       margin-bottom: 100px; */
+
 }
 
         
