--- a/index.html
+++ b/index.html
@@ -579,14 +579,15 @@ background-color: rgba(45, 45, 45, 0.1);
                             </p>
                         </div>
 
-                        <div class="box zone item5" >
+<!--                         <div class="box zone item5" >
                             <h4>Microservices</h4>
                             <p><em>
                                 I have skills in Deploying Microservices with Eureka in Spring Framework.
                                 Knowledge in working with Platform-as-a-service (PaaS) mostly I use Heroku, Git & GitHub.
                             </em>
                             </p>
-                        </div>
+                        </div> 
+-->
 
                         <div class="box zone item6" >
                             <h4>Work</h4>
